2008-08-19 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/print.rb: Work around probable Ruby-GNOME2 bug causing
    segmentation fault.

2008-08-19 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Use default stock "NEW" instead of "Look
    up". The button simply empty the search entry so "Look up" was misleading.

2008-08-19 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Use font name in the search entry but don't
    alter the size.

2008-08-19 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Use font defined for the selected
    dictionary in the search entry as well. In the case of Japanese for example,
    Pango may pick up a Chinese font by mistake and the text in the search entry
    in turns looks ugly. Setting the font for the search entry fixes this
    problem.

2008-01-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: Fixed various bugs occuring
    when Gtk::Print is not available. Hopefully, those changes could be
    backported for release 1.0-beta5.

2007-11-28 Mathieu Blondel <mblondel@svn.gnome.org>

    * release 1.0-beta5    

2007-11-28 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: Rescue the exception raised when the
    gz file is not valid.

2007-11-28 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Include the Gettext module in class<<self
    of Source::Base.

2007-11-28 Mathieu Blondel <mblondel@svn.gnome.org>

    * win32/README: Updated instructions.

2007-11-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/omf/fantasdic/fantasdic-fr.omf: Removed release-specific information.
    * data/omf/fantasdic/fantasdic-C.omf: Ditto.
    * data/gnome/help/fantasdic/README: Updated instructions.

2007-11-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/fantasdic/glade/add_dictionary_dialog.glade: Typo (sources =>