@@ -1,3 +1,9 @@
+2008-08-20 Mathieu Blondel <mblondel@svn.gnome.org>
+
+    * lib/fantasdic/source_base.rb: Created Source::Base::load_plugins class
+    method.
+    * lib/fantasdic.rb: Use it!
+
 2008-08-19 Mathieu Blondel <mblondel@svn.gnome.org>
 
     * lib/fantasdic/ui/print.rb: Work around probable Ruby-GNOME2 bug causing
